--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-
+<h1>This is grade 8, Welcome!</h1>
+<p style="color:blue;">Grade 8 is a class of 18 pupils.</p>
+<img src="https://static.wixstatic.com/media/302892_4634e9d322f54cc0927049cb363db9f9~mv2.jpg/v1/fill/w_1665,h_783,al_c,q_85,usm_0.66_1.00_0.01,enc_avif,quality_auto/302892_4634e9d322f54cc0927049cb363db9f9~mv2.jpg" alt="Science Lab">
+<h2>Where are we?</h2>
+<p style="color:blue;">We are studying at Australia Pacific International School.</p>
+<p>As students, we are dedicated to become skillfull, passionate, and communicative.</p>
+<h2>Subjects</h2>
+<p style="color:blue;">These are the subjects we are learning:</p>
+<li>Mathematics</li>
+<li>Science</li>
+<li>Information Communication Technology</li>
+<li>English</li>
+<li>Global Citizenship</li>
+<p>We study for 5 hours a day.</p>
+<p>However if we want to study another curriculum such as Khmer, we may study for another 5 hours.</p>
+<p>We have lunch from 11:40 until 12:30.</p>
+<p>Then, from 12:30 until 5:05, another curriculum starts.</p>
+<h2>What do we have in our school?</h2>
+<p style="color:blue;">We have:</p>
+<li>A canteen</li>
+<li>A library</li>
+<li>A Science lab</li>
+<li>A computer lab</li>
+<li>Arts and design lab</li>
+<li>A playground</li>
+<li>A basketball court</li>
+<li>A storage component</li>
